# Spreadsheet

CLionProjects/Spreadsheet/: CMakeLists.txt  Max.cpp  Max.h  Media.cpp  Media.h  Mediana.cpp  Mediana.h  Min.cpp  Min.h  MyFrame.cpp  MyFrame.h  MySpreadsheet.cpp  MySpreadsheet.h  Observer.h  ResultCalculation.cpp  ResultCalculation.h  Subject.h  Sum.cpp  Sum.h  TestMySpreadsheet.h  TestResultCalculation.h  main.cpp  main.h
CLionProjects/Spreadsheet/Test/: CMakeLists.txt  TestCalculation.cpp  TestMySpreadsheet.cpp  TestResultCalculation.cpp  runAllTests.cpp
